--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,8 +2,39 @@ body {
 	background-color: #EEE;
 }
 
-.container {
+a { 
+	text-decoration: none;
+	color: #333;
+	font-weight: bold;
+	font-family: Helvetica,arial,freesans,clean,sans-serif;
+	font-size: 14px;
+}
 
+.container {
+	height: 550px;
+}
+
+#action {
+	width: 522px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+#action a {
+	text-shadow: 1px 1px 0 white;
+	white-space: nowrap;
+	border: 1px solid #D4D4D4;
+	border-radius: 3px;
+	background: #F4F4F4;
+	background: -moz-linear-gradient(#F4F4F4,#ECECEC);
+	background: -webkit-linear-gradient(#F4F4F4,#ECECEC);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#f4f4f4',endColorstr='#ececec')";
+	cursor: pointer;
+	user-select: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	margin-right: 20px;
+	padding: 15px;
 }
 
 #card {
@@ -16,12 +47,26 @@ body {
 	margin-right: auto;
 }
 
-#card:hover .back {
-    -webkit-transform: rotateY(0deg);
+.click .front {
+	cursor: pointer;
+	-webkit-transform: rotateX(0deg);
+	-moz-transform: rotateX(0deg);
 }
 
-#card:hover .front {
-    -webkit-transform: rotateY(-180deg);
+.click.flip .front {
+	-webkit-transform: rotateX(180deg);
+	-moz-transform: rotateX(180deg);
+}
+
+.click .back {
+	cursor: pointer;
+	-webkit-transform: rotateX(-180deg);
+	-moz-transform: rotateX(-180deg);
+}
+
+.click.flip .back {
+	-webkit-transform: rotateX(0deg);
+	-moz-transform: rotateX(0deg);
 }
 
 .back {
@@ -32,6 +77,7 @@ body {
 
 .front {
     background-color: #EEA;
+	-webkit-transform: rotateX(0deg);
 }
 
 .back, .front {
@@ -41,7 +87,6 @@ body {
     -webkit-transition: -webkit-transform 1s ease-in;
     width: 100%;
     height: 100%;
-    padding: 20px;
     font-family: Helvetica, Arial, sans-serif;
     color: black;
 	font-size: 90px;
