--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,9 +1,10 @@
 doctype 5
 html(lang="en")
-	link(href="/css/main.css", media="screen", rel="stylesheet", type="text/css")
-	script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js", type="text/javascript")
-	script(src="js/main.js", type="text/javascript")
 	head
+		link(href="/css/main.css", media="screen", rel="stylesheet", type="text/css")
+		script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js", type="text/javascript")
+		script(src="js/main.js", type="text/javascript")
+		meta(name="viewport", content="initial-scale=1.0", width="device-width")
 		title My Flash Card
 	body
 		!= body
